# jjwt

./: .cargo-crap.toml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cliff.toml  dist-workspace.toml  flake.nix
.github/workflows/: ci.yml  release-plz.yml  release.yml
docs/: completion-migration.md
fixtures/: minimal.wt.toml  myapp.wt.toml  wt.example.toml
fixtures/snapshots/: README.md
src/: cli.rs  completion.rs  lib.rs  main.rs
src/core/: config.rs  format.rs  highlight.rs  mod.rs  plan.rs  template.rs  types.rs
src/core/filters/: codename.rs  hash.rs  hash_port.rs  mod.rs  path_parts.rs  sanitize.rs  sanitize_db.rs  sanitize_hash.rs
src/shell/: approvals.rs  ci.rs  config_loader.rs  fs.rs  jj.rs  jj_lib.rs  llm.rs  llm_cache.rs  mod.rs  observe.rs  proc.rs  runtime.rs  state.rs  trash.rs
src/shell/cmd/: alias.rs  complete.rs  config_check.rs  config_create.rs  config_show.rs  doctor.rs  hook.rs  hook_show.rs  list.rs  mod.rs  remove.rs  shell.rs  step_copy_ignored.rs  step_describe.rs  step_diff.rs  step_eval.rs  step_for_each.rs  step_pick.rs  step_prune.rs  step_relocate.rs  step_tether.rs  step_var.rs  switch.rs
tests/: core_config.rs  core_config_merge.rs  core_filters.rs  core_format_list.rs  core_plan_alias.rs  core_plan_hook.rs  core_plan_hook_show.rs  core_plan_list.rs  core_plan_prune.rs  core_plan_relocate.rs  core_plan_remove.rs  core_plan_switch.rs  core_template.rs  e2e_smoke.rs  shell_runtime.rs  template_fidelity.rs
tests/snapshots/: core_format_list__list_table_default_plus_two_worktrees.snap  core_format_list__list_table_single_default_workspace.snap  template_fidelity__myapp_bug-foo.snap  template_fidelity__myapp_feat-port-webhook-to-rust.snap  template_fidelity__myapp_main.snap
